Added QOL improvements, main.cpp now mostly handles window loop and events thanks to DraggingManager and BodyFactory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(StormPhysics
         src/main.cpp
         src/RigidBody.cpp
         src/PhysicsWorld.cpp
+        src/DraggingManager.cpp
         src/CircleBody.cpp
         include/Config.h
 )
